<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:text="create Account"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_height="wrap_content"/>
        <ImageView
            android:layout_width="wrap_content"
            android:padding="20dp"
            android:src="@drawable/ic_vector__45_"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:text="What's your name"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_height="wrap_content"/>
    <EditText
        android:layout_width="match_parent"
        android:background="@drawable/rectangle_edittext"
        android:backgroundTint="@color/white"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:text="@string/This_appears"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"
        android:padding="12dp"
        android:textStyle="bold"
        android:layout_height="wrap_content"/>
    <Button
        android:layout_width="150dp"
        android:background="@drawable/button_image"
        android:layout_gravity="center"
        android:text="CREATE"
        android:backgroundTint="#808080"
        android:textColor="@color/white"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:text="@string/By_creating_account"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"
        android:padding="12dp"
        android:textStyle="bold"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:text="@string/service"
        android:textColor="@color/white"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:text="@string/To_learn_more_about"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"
        android:padding="12dp"
        android:textStyle="bold"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:text="@string/policy"
        android:textColor="@color/white"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:text="@string/we_may"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"
        android:padding="12dp"
        android:textStyle="bold"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:text="@string/protect_by"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:padding="12dp"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:layout_height="wrap_content"/>

</LinearLayout>